--- a/.env
+++ b/.env
@@ -11,6 +11,7 @@
 
 # The version of Hume this package refers to
 HUME_VERSION=2.9.0-alpha3
+REACT_APP_VERSION=v4
 
 # The address where this Hume instance is reachable
 #HUME_ADVERTISED_ADDRESS=localhost
