--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,8 @@ services:
       - KEYCLOAK_USER=admin
       - KEYCLOAK_PASSWORD=admin123
       - PROXY_ADDRESS_FORWARDING=true
-      - KEYCLOAK_IMPORT=/tmp/scripts/realm-export.json
+      - KEYCLOAK_FRONTEND_URL=http://localhost:8180/auth
+      # - KEYCLOAK_LOGLEVEL=DEBUG
     ports:
       - "8180:8080"
     restart: always
@@ -35,15 +36,21 @@ services:
     #   retries: 10
     volumes:
       - ./resources/scripts:/tmp/scripts
-  keycloak_create_users:
-    image: quay.io/keycloak/keycloak:15.0.2
-    depends_on:
-      - keycloak
-    volumes:
-      - ./resources/scripts:/tmp/scripts
+  keycloak-config:
+    image: adorsys/keycloak-config-cli:latest
     environment:
-      - KEYCLOAK_URL=http://keycloak:8080
-    entrypoint: /tmp/scripts/create-keycloak-user.sh
+      - logging.level.root=DEBUG
+      - KEYCLOAK_URL=http://keycloak:8080/auth
+      - KEYCLOAK_USER=admin
+      - KEYCLOAK_PASSWORD=admin123
+      - KEYCLOAK_AVAILABILITYCHECK_ENABLED=true
+      - KEYCLOAK_AVAILABILITYCHECK_TIMEOUT=10s
+      - IMPORT_VARSUBSTITUTION=true
+      - TESTUSER_PASSWORD=${KEYCLOAK_DEFAULT_PASSWORD:-default}
+      - TESTUSER_NAME=${KEYCLOAK_DEFAULT_USER:-testuser}
+      - IMPORT_PATH=/config
+    volumes:
+      - ./resources/keycloak-config:/config
   neo4j:
     image: docker.graphaware.com/mirror/neo4j:4.3.3-enterprise
     ports:
@@ -56,10 +63,6 @@ services:
       - NEO4J_dbms_connector_bolt_advertised__address=${HUME_ADVERTISED_ADDRESS:-localhost}:${NEO4J_PORT:-7687}
       - NEO4JLABS_PLUGINS=["apoc","graph-data-science"]
       - NEO4J_apoc_trigger_enabled=true
-      - NEO4J_fabric_database_name=pocket
-      - NEO4J_fabric_graph_0_uri=neo4j://localhost:7687
-      - NEO4J_fabric_graph_0_database=search
-      - NEO4J_fabric_graph_0_name=search
     volumes:
       - "hume_neo4j_data:/data"
       - "hume_neo4j_plugins:/plugins"
@@ -85,16 +88,16 @@ services:
       - "8080:8080"
       - "8001:8001"
     environment:
+      # - logging.level.root=DEBUG
       - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/${HUME_DB_USER:-hume}
       - SPRING_DATASOURCE_USERNAME=${HUME_DB_USER:-hume}
       - SPRING_DATASOURCE_PASSWORD=${HUME_DB_PASSWORD:-pgsqls3cr3t}
       - hume.orchestra.uri=http://orchestra:8100
       - hume.security.provider=keycloak
-      - keycloak.auth-server-url=http://localhost:8180/auth
-      - keycloak.proxy-url=http://keycloak:8080/auth
+      - keycloak.auth-server-url=http://keycloak:8080/auth
       - keycloak.realm=hume
-      - keycloak.resource=hume-web
-      - keycloak.public-client=true
+      - keycloak.resource=hume-api
+      - keycloak.credentials.secret=my-special-client-secret
       - keycloak.principal-attribute=preferred_username
       - keycloak.use-resource-role-mappings=true
       - keycloak.enabled=true
