# Routes having the cluster domain suffix (by default 'svc.cluster.local')     # will not be exposed through Ingress. You can define your own label     # selector to assign that domain suffix to your Route here, or you can set     # the label update to recent hume

--- a/resources/keycloak-config/config.json
+++ b/resources/keycloak-config/config.json
@@ -4,7 +4,7 @@
     "users": [
         {
             "username": "$(env:TESTUSER_NAME)",
-            "email": "chris@hume.k8s",
+            "email": "testuser@hume.ga",
             "enabled": true,
             "credentials": [
               {
