--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@
 
 
 # The version of Hume this package refers to
-HUME_VERSION=2.9.5
+HUME_VERSION=2.10.0-RC
 REACT_APP_VERSION=v4
 
 # The address where this Hume instance is reachable
